--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/toHok-4l/snapdrop#readme",
   "dependencies": {
+    "auto-launch": "^5.0.5",
     "electron": "^12.0.2",
     "electron-store": "^7.0.2",
     "mime-types": "^2.1.29",
